fix navbar to bottom on mobile, clean up mobile container

--- a/client/src/assets/stylesheets/App.scss
+++ b/client/src/assets/stylesheets/App.scss
@@ -148,8 +148,7 @@ input, form input {
 
 @media only screen and (max-width: 700px) {
   .non-navigation-content {
-    padding: 0 1rem;
-    margin-bottom: 6rem;
+    padding: 1rem 1rem 6rem 1rem;
   }
 
   .card {
