--- a/client/src/assets/stylesheets/expenseForm.scss
+++ b/client/src/assets/stylesheets/expenseForm.scss
@@ -1,5 +1,5 @@
 .new-expense-form {
-  margin: 1.7rem 0;
+  margin: 1rem 0;
 }
 
 .add-expense-toggle {
