--- a/client/src/assets/stylesheets/settings.scss
+++ b/client/src/assets/stylesheets/settings.scss
@@ -1,7 +1,3 @@
-.settings {
-  margin-top: 1rem;
-}
-
 .logout {
   text-align: center;
 }
